--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,7 +17,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>*.htm</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
